# WhisperAndroid

./: .gitmodules  README.md
android/: .gitignore  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/androidTest/java/com/mercuryworkshop/whisperandroid/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/test/: MainActivity.java  MyVpnService.java
android/app/src/main/java/com/mercuryworkshop/whisperandroid/: MainActivity.kt  WhisperService.kt
android/app/src/main/java/com/mercuryworkshop/whisperandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  qricon.xml  wisp_background.xml  wisp_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/mercuryworkshop/whisperandroid/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
wisp2socks/: Cargo.toml
wisp2socks/src/: android_logger.rs  lib.rs
